--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Joke Teller</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <div class="container">
+        <button id="button">Tell Me A Joke</button>
+        <audio controls id="audio" hidden></audio>
+    </div>
+    <!-- Script -->
+    <script src="voice.js"></script>
     <script src="script.js"></script>
 
 </body>
